# L2-CLI

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REQUIREMENTS.md
final-test/: README.md  index.html  package-lock.json  package.json
final-test/src/: App.jsx  main.jsx  wagmi.js
src/: main.rs
src/commands/: config.rs  doctor.rs  init.rs  mod.rs
src/utils/: config.rs
templates/aa-base/: README.md
templates/aa-base/contracts/: README.md  foundry.toml
templates/aa-base/contracts/script/: Deploy.s.sol
templates/aa-base/contracts/src/: SimpleAccount.sol
templates/aa-base/frontend/: .env.example  index.html  package.json
templates/aa-base/frontend/src/: App.jsx  main.jsx  wagmi.js
templates/aa-base/frontend/src/components/: GaslessButton.jsx
templates/aa-base/frontend/src/hooks/: useSmartAccount.js
templates/react/: README.md  index.html  package.json
templates/react/src/: App.jsx  wagmi.js
test-react/: README.md  index.html  package-lock.json  package.json
test-react/src/: App.jsx  wagmi.js
