[package]
name = "l2-cli"
version = "0.1.0"
edition = "2021"
authors = ["Puneeth R"]
description = "Command-line scaffolding tool for Ethereum L2 (Base, Optimism) developers"
license = "MIT"
repository = "https://github.com/Puneeth-R-140/L2-CLI"
keywords = ["ethereum", "layer2", "base", "optimism", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
dirs = "5.0"
tera = "1.20"

[dev-dependencies]
mockito = "1.5"
tempfile = "3.13"

[[bin]]
name = "l2"
path = "src/main.rs"
